tests/ui/coverage-attr/word-only.stderr
error: malformed `coverage` attribute input
  --> $DIR/word-only.rs:12:1
   |
LL | #[coverage]
   | ^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL | #[coverage(off)]
   |           +++++
LL | #[coverage(on)]
   |           ++++

error: malformed `coverage` attribute input
  --> $DIR/word-only.rs:17:5
   |
LL |     #![coverage]
   |     ^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL |     #![coverage(off)]
   |                +++++
LL |     #![coverage(on)]
   |                ++++

error: malformed `coverage` attribute input
  --> $DIR/word-only.rs:21:1
   |
LL | #[coverage]
   | ^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL | #[coverage(off)]
   |           +++++
LL | #[coverage(on)]
   |           ++++

error: malformed `coverage` attribute input
  --> $DIR/word-only.rs:26:1
   |
LL | #[coverage]
   | ^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL | #[coverage(off)]
   |           +++++
LL | #[coverage(on)]
   |           ++++

error: malformed `coverage` attribute input
  --> $DIR/word-only.rs:29:5
   |
LL |     #[coverage]
   |     ^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL |     #[coverage(off)]
   |               +++++
LL |     #[coverage(on)]
   |               ++++

error: malformed `coverage` attribute input
  --> $DIR/word-only.rs:35:1
   |
LL | #[coverage]
   | ^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL | #[coverage(off)]
   |           +++++
LL | #[coverage(on)]
   |           ++++

error: malformed `coverage` attribute input
  --> $DIR/word-only.rs:39:5
   |
LL |     #[coverage]
   |     ^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL |     #[coverage(off)]
   |               +++++
LL |     #[coverage(on)]
   |               ++++

error: malformed `coverage` attribute input
  --> $DIR/word-only.rs:44:5
   |
LL |     #[coverage]
   |     ^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL |     #[coverage(off)]
   |               +++++
LL |     #[coverage(on)]
   |               ++++

error: malformed `coverage` attribute input
  --> $DIR/word-only.rs:50:1
   |
LL | #[coverage]
   | ^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL | #[coverage(off)]
   |           +++++
LL | #[coverage(on)]
   |           ++++

error: malformed `coverage` attribute input
  --> $DIR/word-only.rs:53:5
   |
LL |     #[coverage]
   |     ^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL |     #[coverage(off)]
   |               +++++
LL |     #[coverage(on)]
   |               ++++

error: malformed `coverage` attribute input
  --> $DIR/word-only.rs:58:5
   |
LL |     #[coverage]
   |     ^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL |     #[coverage(off)]
   |               +++++
LL |     #[coverage(on)]
   |               ++++

error: malformed `coverage` attribute input
  --> $DIR/word-only.rs:64:1
   |
LL | #[coverage]
   | ^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL | #[coverage(off)]
   |           +++++
LL | #[coverage(on)]
   |           ++++

error: aborting due to 12 previous errors

